# FlatRPC

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md
cmake/: flatbuf.cmake  flatrpc.cmake  inja.cmake
compiler/: CMakeLists.txt  flatrpcc.cpp  reflection_generated.h
compiler/flatrpcc_inja/: flatrpc.cpp.inja  flatrpc.cpp.inja.h  flatrpc.hpp.inja  flatrpc.hpp.inja.h
examples/: CMakeLists.txt  Makefile
examples/abstractclient/: CMakeLists.txt  client.cpp  greeter_client.hpp  greeter_server.cpp  greeter_server.hpp  server.cpp  simple.fbs
examples/simple/: CMakeLists.txt  client.cpp  greeter_server.hpp  simple.fbs  simple_flatrpc.cpp  simple_flatrpc.hpp  simple_generated.h
examples/timeouts/: CMakeLists.txt  client.cpp  expensive_server.cpp  expensive_server.hpp  server.cpp  timeout.fbs  timeout_flatrpc.cpp  timeout_flatrpc.hpp  timeout_generated.h
examples/types/: CMakeLists.txt  client.cpp  server.cpp  types.fbs  types_generated.h  types_server.cpp  types_server.hpp
examples/util/: examples_as_tests.sh
rpc/: CMakeLists.txt  rpcbase.cpp  rpcclient.cpp  rpcrunnable.cpp  rpcserver.cpp  rpcsockets.cpp
rpc/fbs/: CMakeLists.txt  rpc.fbs  rpc_generated.h
rpc/include/flatrpc/: rpcbase.hpp  rpcclientbase.hpp  rpcrunnable.hpp  rpcserverbase.hpp  rpcsockets.hpp
rpc/include/rpc/: rpc.hpp  rpcbase.hpp  rpcclient.hpp  rpcclientbase.hpp  rpcrunnable.hpp  rpcserver.hpp  rpcserverbase.hpp  rpcsockets.hpp  rpctypedbase.hpp
test/: CMakeLists.txt  test_rpcrunnable.cpp
tools/: CMakeLists.txt  flatrpc.cpp  flatrpcc.cpp  reflection_generated.h
tools/flatrpc_inja/: flatrpc.cpp.inja  flatrpc.cpp.inja.h  flatrpc.hpp.inja  flatrpc.hpp.inja.h
tools/flatrpcc_inja/: flatrpc.cpp.inja.h  flatrpc.hpp.inja  flatrpc.hpp.inja.h
util/: get-deps.sh
